# KometaUI

./: README.md  docker-compose.example.yml
backend/: pyproject.toml
backend/app/: auth.py  config_registry.py  config_store.py  db.py  docker_runner.py  file_store.py  log_utils.py  main.py  poster_store.py  run_lock.py  settings.py
backend/app/routes/: config.py  files.py  health.py  logs.py  overlay_preview.py  posters.py  runs.py
backend/tests/: test_config.py  test_lock.py
docker/: Dockerfile  entrypoint.sh
frontend/: index.html  package.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
frontend/src/components/: AuthPrompt.tsx  Layout.tsx  StatusPill.tsx
frontend/src/pages/: Config.tsx  Dashboard.tsx  Logs.tsx  RunDetail.tsx  Runs.tsx
frontend/src/state/: auth.tsx
